# motor_ws

./: CMakeLists.txt  README.md  epos4_01  epos4_01.out  epos4_02  epos4_02.out  epos4_03.out  epos4_04.out  epos4_05.out  epos4_06.out  makefile  motor1_data.txt  motor2_data.txt  motor4_data.txt
CSPMotorController/: CMakeLists.txt
CSPMotorController/src/: CSPMotorController.cpp  CSPMotorController.h  main.cpp
CSVMotorController/: CMakeLists.txt
CSVMotorController/logging/: M1_pos01.txt  M1_vel01.txt  M2_pos01.txt  M2_vel01.txt  pos01.txt  pos02.txt  robot_M1_pos01.txt  robot_M1_vel01.txt  robot_M2_pos01.txt  robot_M2_vel01.txt  robot_M3_pos01.txt  robot_M3_vel01.txt  robot_M4_pos01.txt  robot_M4_vel01.txt  robot_M5_pos01.txt  robot_M5_vel01.txt  robot_M6_pos01.txt  robot_M6_vel01.txt  robot_M7_pos01.txt  robot_M7_vel01.txt  robot_M8_pos01.txt  robot_M8_vel01.txt  ros_pos01.txt  ros_vel01.txt  vel01.txt  vel02.txt
CSVMotorController/src/: CSVMotorController.cpp  CSVMotorController.h  main.cpp  multiple_target.cpp  robot_1DOF.cpp  ros_queue_test.cpp  ros_robot_1DOF.cpp  two_motors.cpp
Controllers/: CMakeLists.txt
Controllers/logging/: csp_predict_pos01.txt  csp_predict_vel01.txt  csp_zero_vel_pos02.txt  csp_zero_vel_vel01.txt  csp_zero_vel_vel02.txt  csv_prev_vel_pos01.txt  csv_prev_vel_vel01.txt  get_acc_jerk.py  plot.py  plot_orig.py
Controllers/logging/csp_predict/: csp_predict_acc01.txt  csp_predict_acc02.txt  csp_predict_jerk01.txt  csp_predict_jerk02.txt  csp_predict_pos01.txt  csp_predict_pos02.txt  csp_predict_vel01.txt  csp_predict_vel02.txt
Controllers/logging/csp_zero_vel/: csp_zero_vel_acc02.txt  csp_zero_vel_acc03.txt  csp_zero_vel_jerk02.txt  csp_zero_vel_jerk03.txt  csp_zero_vel_pos01.txt  csp_zero_vel_pos02.txt  csp_zero_vel_pos03.txt  csp_zero_vel_vel02.txt  csp_zero_vel_vel03.txt
Controllers/logging/csv_prev_vel/: csv_prev_vel_acc01.txt  csv_prev_vel_jerk01.txt  csv_prev_vel_pos01.txt  csv_prev_vel_pos02.txt  csv_prev_vel_vel01.txt  csv_prev_vel_vel02.txt
Controllers/src/: MotorController.cpp  MotorController.h  MotorController2.cpp  MotorController2.h  csp_predict.cpp  csp_zero_vel.cpp  csv_prev_vel.cpp
Epos4_EtherCAT/: CMakeLists.txt  makefile
Epos4_EtherCAT/include/: motor.h
Epos4_EtherCAT/logging/: 5th_pos2.txt  5th_pos99.txt  5th_vel2.txt  5th_vel99.txt  csv_poly5_pos.txt  csv_poly5_vel.txt  position_data.txt  position_data2.txt  position_data3.txt  sine_sweep_csp.txt  sine_sweep_csv.txt  sine_sweep_csv2.txt  sine_sweep_ppm.txt  velocity_data2.txt  velocity_data3.txt
Epos4_EtherCAT/src/: 01_start_code_epos4_ecat.c  03_csv_with_pi_controller.c  04_csp_poly5.c  05_sine_sweep_csp.c  06_sine_sweep_ppm.c  07_sine_sweep_csv.c  08_homing.c
FailedMotorClass/: CMakeLists.txt
FailedMotorClass/src/: CSPMotorController.cpp  CSPMotorController.h  main.cpp
logging/: 5th_pos.txt  5th_pos99.txt  5th_vel.txt  5th_vel99.txt  motor2_data.txt  position_data4.txt  sine_sweep_csp.txt  sine_sweep_csp2.txt  sine_sweep_csv.txt  slave1_data.txt  slave2_data.txt  velocity_data.txt  velocity_data4.txt
src/: 01_start_code_epos4_ecat.c  02_two_motors_and_logging.c  04_csp_poly5.c  05_sine_sweep_csp.c  07_sine_sweep_csv.c  08_homing.c  09_csv_poly5.c  csp_poly5.c  csv_with_pi_controller.c  sine_sweep_csp.c  start_code_epos4_ecat.c  two_motors_and_logging.c
